--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "tailwindcss": "^3.1.0"
+    },
+    "dependencies": {
+        "react-responsive-carousel": "^3.2.23"
     }
 }
